--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "Anni Kynsilehto",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^3.0.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "graphql": "^15.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.13.3"
   },
   "devDependencies": {
