--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon index.js"
   },
   "author": "Anni Kynsilehto",
@@ -17,6 +17,8 @@
     "mongoose": "^5.13.3"
   },
   "devDependencies": {
+    "apollo-server-testing": "^2.25.2",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12"
   }
 }
