--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon index.js"
+    "start": "nodemon server/index.js"
   },
   "author": "Anni Kynsilehto",
   "license": "ISC",
